# VerifiedJS

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  Dockerfile  FAILURES.md  PROGRESS.md  PROOF_BLOCKERS.md  README.md  SORRY_REPORT.md  TAKEAWAYS.md  TASKS.md  TIMELINE.md  VerifiedJS.lean  analysis.ipynb  analysis.py  hello.js  lake-manifest.json  lakefile.lean  lean_parser.py  my_demo.js  pyproject.toml  spec.md
.agent_state/: state.db
.claude/: settings.json
MEMORY/: AGENTS.md
VerifiedJS/: Driver.lean  Tactics.lean  Util.lean
agent_logs/: crontab.txt
agents/: runner.sh  verified_compiler_agents.py
infrastructure/: cron_schedule  dashboard.py  refresh_agent_auth.sh  setup_permissions.sh
logs/: agent_liveness.csv  agent_liveness.csv.tmp  agent_runs.csv  build_status.json  dep_graph.json  spec_coverage.json  stats.csv  test262_history.csv  test262_history.json  test262_latest.txt  test262_results.json  test262_summary.md  time_estimate.csv
presentation/: 01_wasmspec_rm_rf.txt  02_jsspec_revert.txt  03_trivial_theorem.txt  04_false_theorem.txt  05_step_partial_saga.txt  06_simp_loop.txt  07_call_stub_16x.txt  08_auth_wastage.txt  09_supervisor_acts.txt  10_spec_hallucination.txt  11_sorry_trajectory.txt  12_agent_file_denied.txt  13_cc_cases_evolution.txt
scripts/: agent_supervisor.sh  auth_watchdog.sh  auto_snapshot.sh  bisect.sh  build_status_cron.sh  claude_refresh.py  dep_graph.py  dep_graph.sh  hackathon_demo.sh  lake_build_concise.sh  lsp_diagnostics.py  parse_flagship.sh  rotate_logs.sh  run_e2e.sh  run_flagship_cycles.sh  (+14 more)
(+2702 files in other folders)
